Fixed input appearance on iOS devices

--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -34,3 +34,9 @@ body,
   padding: 0;
   height: 100%;
 }
+
+input {
+  margin: 0;
+  border-radius: 0;
+  -webkit-appearance: none;
+}
